--- a/src/main/locale/en-US/visualdiffer/visualdiffer.properties
+++ b/src/main/locale/en-US/visualdiffer/visualdiffer.properties
@@ -1,1 +1,6 @@
 extensions.visualdiffer@dafizilla.sourceforge.net.description=Show visually file differences
+line.out.of.range=Line number %S is out of range
+mo.more.differences=No more differences
+session.name=Name
+session.saveas=Save Session As
+session.confirm.overwrite=Session '%S' already exists.\nAre you sure to overwrite?
