--- a/src/main/locale/en-US/visualdiffer/chooseCompare.dtd
+++ b/src/main/locale/en-US/visualdiffer/chooseCompare.dtd
@@ -6,3 +6,5 @@
 <!ENTITY right.folders.label "Right Folder">
 <!ENTITY left.file.label "Left File">
 <!ENTITY right.file.label "Right File">
+<!ENTITY sessions.label "Session List">
+<!ENTITY remove.label "Remove">
