fixed - removed lastTimeUsed, sorted by name

--- a/src/main/locale/en-US/visualdiffer/gotoline.dtd
+++ b/src/main/locale/en-US/visualdiffer/gotoline.dtd
@@ -2,3 +2,4 @@
 <!ENTITY line.number.label "Line number">
 <!ENTITY at.left.label "At left">
 <!ENTITY at.right.label "At right">
+<!ENTITY invalid.number "Invalid number">
