--- a/src/main/locale/en-US/visualdiffer/visualdiffer.properties
+++ b/src/main/locale/en-US/visualdiffer/visualdiffer.properties
@@ -4,3 +4,4 @@ mo.more.differences=No more differences
 session.name=Name
 session.saveas=Save Session As
 session.confirm.overwrite=Session '%S' already exists.\nAre you sure to overwrite?
+session.invalid.name=Invalid Session Name
