--- a/src/main/locale/en-US/visualdiffer/chooseCompare.dtd
+++ b/src/main/locale/en-US/visualdiffer/chooseCompare.dtd
@@ -8,3 +8,4 @@
 <!ENTITY right.file.label "Right File">
 <!ENTITY sessions.label "Session List">
 <!ENTITY remove.label "Remove">
+<!ENTITY rename.label "Rename">
