--- a/src/main/locale/en-US/visualdiffer/visualdiffer.properties
+++ b/src/main/locale/en-US/visualdiffer/visualdiffer.properties
@@ -5,3 +5,9 @@ session.name=Name
 session.saveas=Save Session As
 session.confirm.overwrite=Session '%S' already exists.\nAre you sure to overwrite?
 session.invalid.name=Invalid Session Name
+session.rename=Rename Session
+session.name.already.in.use=Session name already in use
+
+invalid.folder=Invalid Folder
+invalid.file=Invalid File
+
