--- a/src/main/locale/en-US/visualdiffer/visualdiffer.dtd
+++ b/src/main/locale/en-US/visualdiffer/visualdiffer.dtd
@@ -1,1 +1,3 @@
 <!ENTITY visual.compare.menuitem.label "Visual Compare...">
+<!ENTITY visual.compare.accesskey "v">
+<!ENTITY visualdiffer.main.dialog.desc "VisualDiffer: Main Dialog...">
