--- a/src/main/locale/en-US/visualdiffer/comparison.dtd
+++ b/src/main/locale/en-US/visualdiffer/comparison.dtd
@@ -3,4 +3,4 @@
 <!ENTITY comparison.timestamp "Use Timestamp">
 <!ENTITY comparison.contents "Contents">
 <!ENTITY comparison.size "Use Size">
-<!ENTITY comparison.binary "Binary comparision">
+<!ENTITY comparison.binary "Binary comparison">
