added - ability to select files to compare from context menu

--- a/src/main/locale/en-US/visualdiffer/visualdiffer.dtd
+++ b/src/main/locale/en-US/visualdiffer/visualdiffer.dtd
@@ -1,3 +1,8 @@
 <!ENTITY visual.compare.menuitem.label "Visual Compare...">
 <!ENTITY visual.compare.accesskey "v">
 <!ENTITY visualdiffer.main.dialog.desc "VisualDiffer: Main Dialog...">
+
+
+<!ENTITY visualdiffer.select.left.file.label "Select Left File">
+<!ENTITY visualdiffer.select.left.file.desc "VisualDiffer: Select Left File To Compare">
+<!ENTITY visualdiffer.compare.to.desc "VisualDiffer: Compare selected file to current...">
