--- a/src/main/locale/en-US/visualdiffer/visualdiffer.properties
+++ b/src/main/locale/en-US/visualdiffer/visualdiffer.properties
@@ -11,3 +11,4 @@ session.name.already.in.use=Session name already in use
 invalid.folder=Invalid Folder
 invalid.file=Invalid File
 
+compare.to=Compare to "%S"...
