fixed - title on main dialog

--- a/src/main/locale/en-US/visualdiffer/chooseCompare.dtd
+++ b/src/main/locale/en-US/visualdiffer/chooseCompare.dtd
@@ -1,4 +1,4 @@
-<!ENTITY choosecompare.title "Visual Compare - Open">
+<!ENTITY choosecompare.title "Compare Files or Folders - VisualDiffer">
 
 <!ENTITY folders.label "Folders">
 <!ENTITY files.label "Files">
